Fixed repeating bg image on welcome page and spacing of text v. button

--- a/src/components/pages/WelcomeBoard/WelcomeBoard.less
+++ b/src/components/pages/WelcomeBoard/WelcomeBoard.less
@@ -1,14 +1,15 @@
 .dashboard {
-
-    background-image: url('./../../../assets/images/bgteam.svg');
+    background: url("../../../assets/images/BG-Team.png") center center no-repeat;
+    background-size: cover;
     height: 638px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
 }
 
 .dashboard p {
+    margin-bottom: 40px;
     width: 488px;
     height: 47px;
     color:#4E4E4E;
